# lta

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  whitelist.txt
.github/actions/setup_nox/: action.yml
.github/actions/setup_psr/: action.yml
.github/workflows/: cicd.yaml
docs/: cli.md  commands.md  conf.py  conftest.md  custom_types.md  data_handling.md  helpers.md  index.md  jaccard.md  lta.md  parser.md  pipeline.md  requirements.txt  tests.md  tests_integration.md  tests_unit.md
examples/: data.csv  lta_conf.txt
lta/: __init__.py  cli.py  parser.py
lta/commands/: __init__.py  run.py  simple.py
lta/cores/: __init__.py
lta/cores/cpa/: __init__.py
lta/cores/cpa/clustering/: __init__.py  hierarchical.py
lta/cores/cpa/normalizer/: __init__.py  base.py  pca.py
lta/helpers/: __init__.py  custom_types.py  data_handling.py  jaccard.py  pipeline.py  utils.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_commands_run.py  test_commands_simple.py  test_helpers_custom_types.py  test_helpers_data_handling.py  test_helpers_jaccard.py  test_helpers_pipeline.py  test_parser.py
tests/unit/cores/cpa/clustering/: hierarchical.py  test_hierarchical.py
tests/unit/cores/cpa/normalizer/: base.py  pca.py  test_base.py  test_pca.py
tests/unit/helpers/: test_jaccard.py  test_utils.py
