[tool.poetry]
name = "LipidTrafficAnalysis"
version = "3.5.3"
packages=[{include = "lta"}]
description = "Lipid Traffic Analysis"
license = "MIT"
authors = ["rbpatt2019 <rb.patterson.cross@gmail.com>", "Selok <selokyeung@gmail.com>"]
readme = "README.md"
repository = "https://github.com/IMS-Bio2Core-Facility/LTA"
documentation = "https://LTA.readthedocs.io/en/latest/"
homepage = "https://pypi.org/project/LipidTrafficAnalysis/"
classifiers = [
        "Development Status :: 4 - Beta",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Environment :: Console",
        "Intended Audience :: Science/Research",
        "Operating System :: OS Independent",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.15"
ConfigArgParse = "^1.5"
pandas = "^2.0"
numpy = "^2.0"
scikit-learn = "^1.6.0"
poetry-plugin-export = "^1.10.0"

[tool.poetry.group.dev.dependencies]
nox = "^2022"
pre-commit = "^2.13.0"
commitizen = "^2.17.13"
pytest = "^9.0.3"
pytest-xdist = "^3.0"
pytest-clarity = "^1.0.1"
pytest-sugar = "^1.0"
coverage = "^7.0"
pytest-cov = "^5.0"
pytest-mock = "^3.6.1"
xdoctest = "^1.0.0"
flake8 = "^7.0.0"
pyproject-flake8 = "^7.0.0"
flake8-annotations = "^3.0"
flake8-bandit = "^4.0.0"
flake8-bugbear = "^24.0"
flake8-comprehensions = "^3.5.0"
flake8-docstrings = "^1.6.0"
flake8-pytest-style = "^2.0"
flake8-spellcheck = "^0"
darglint = "^1.8.0"
mypy = "^1"
isort = "^5.9.3"
black = "^26.0.0"
pip-audit = "^2.0"
Sphinx = "^7.1.1"
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.scripts]
lta = "lta.cli:main"

[tool.semantic_release]
branch = "main"
version_variable = [
        "lta/__init__.py:__version__",
        "docs/conf.py:version"
]
version_toml = [
        "pyproject.toml:tool.poetry.version"
]
changelog_file = "CHANGELOG.md"
build_command = "poetry build"


[tool.coverage.run]
branch = true
source = ["lta"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = """
-n auto
-vv
--ignore=docs
--ignore=test.py
--ignore=run.py
--xdoctest
--cov=lta
--cov-report=term
--cov-report=xml
"""

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = false

[tool.flake8]
select = "ANN,B,B9,C,C4,D,DAR,F,S,SC"
ignore = "ANN101,S101,B950,SC100"
exclude = "docs/conf.py,noxfile.py"
max-line-length = 88
max-complexity = 10
docstring-convention = "numpy"
docstring-style = "numpy"
strictness = "short"
dictionaries = "en_US,python,technical"
spellcheck-targets = "comments"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
